# 3d-render

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
resources/glsl/: main.frag  main.vert
src/: App.cpp  App.hpp  Model.cpp  Model.hpp  ScreenBuffer.cpp  main.cpp
src/Engine/: Engine.cpp  Engine.hpp  Pipeline.cpp  Pipeline.hpp  Shader.hpp  Utility.hpp
src/Engine/Model/: Model.cpp  Model.hpp
src/Model/: Model.cpp  Model.hpp
src/ScreenBuffer/: ScreenBuffer.cpp  ScreenBuffer.hpp
src/Window/: window.cpp  window.hpp
